Update files test in ipynb

--- a/src/test/Detect.ipynb
+++ b/src/test/Detect.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PRÉ-AMBULO - IMPORT LIBS"
+    "# VERIFICANDO SE TEM CUDA"
    ]
   },
   {
@@ -21,6 +21,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DATASET >> https://universe.roboflow.com/force-iaope/cars-egrgd/dataset/1#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PRÉ-AMBULO - IMPORT LIBS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,8 +45,15 @@
     "import cv2\n",
     "import os\n",
     "\n",
-    "from modules.helper.helper import create_video_from_images, get_framerate\n",
-    "\n",
+    "from modules.helper.helper import create_video_from_images, get_framerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# # Create a new YOLO model from scratch\n",
     "model = YOLO(\"yolo11n.yaml\")\n",
     "\n",
@@ -40,7 +61,7 @@
     "model = YOLO(\"yolo11n.pt\")\n",
     "\n",
     "# Train the model using the 'coco8.yaml' dataset for 3 epochs\n",
-    "results = model.train(data=\"coco8.yaml\", epochs=100, batch=16, device=\"0\", workers=4, classes=[0, 1, 2, 3, 5, 7])\n",
+    "results = model.train(data=\"data.yaml\", epochs=3, batch=16, device=\"0\", workers=4)#, classes=[0, 1, 2, 3, 5, 7])\n",
     "\n",
     "# Perform object detection on an image using the model\n",
     "results = model(\"https://ultralytics.com/images/bus.jpg\")\n",
