--- a/src/test/Moviment.ipynb
+++ b/src/test/Moviment.ipynb
@@ -180,11 +180,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "\n",
     "# Caminhos\n",
     "video_path = \"input\\\\Teste.mp4\"\n",
     "save = \"output\\\\knn_video\"\n",
@@ -227,10 +222,10 @@
     "    \n",
     "    # Grayscale e equalização\n",
     "    frame_equalized = cv2.equalizeHist(cv2.cvtColor(frame_blur, cv2.COLOR_BGR2GRAY))\n",
-    "        \n",
+    "    \n",
     "    # Aplicar subtração de fundo KNN\n",
     "    fgmask = fgbg.apply(frame_equalized)\n",
-    "\n",
+    "    \n",
     "    # Remover sombras (valores intermediários)\n",
     "    fgmask[fgmask == 127] = 0\n",
     "\n",
@@ -261,7 +256,7 @@
     "    cv2.imwrite(os.path.join(save, f\"results_{idx:04}.jpg\"), precise_mask)\n",
     "\n",
     "    idx += 1\n",
-    "\n",
+    "    \n",
     "cap.release()\n",
     "\n",
     "# Criar vídeo final\n",
@@ -283,98 +278,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting motrackers\n",
-      "  Downloading motrackers-0.0.2-py3-none-any.whl.metadata (5.5 kB)\n",
-      "Requirement already satisfied: numpy in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from motrackers) (2.1.1)\n",
-      "Requirement already satisfied: scipy in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from motrackers) (1.15.2)\n",
-      "Requirement already satisfied: matplotlib in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from motrackers) (3.10.1)\n",
-      "Requirement already satisfied: opencv-python in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from motrackers) (4.11.0.86)\n",
-      "Requirement already satisfied: pandas in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from motrackers) (2.2.3)\n",
-      "Collecting motmetrics (from motrackers)\n",
-      "  Downloading motmetrics-1.4.0-py3-none-any.whl.metadata (20 kB)\n",
-      "Requirement already satisfied: setuptools in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from motrackers) (70.2.0)\n",
-      "Collecting ipyfilechooser (from motrackers)\n",
-      "  Downloading ipyfilechooser-0.6.0-py3-none-any.whl.metadata (6.4 kB)\n",
-      "Collecting ipywidgets (from ipyfilechooser->motrackers)\n",
-      "  Downloading ipywidgets-8.1.5-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (4.56.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (11.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (3.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from matplotlib->motrackers) (2.9.0.post0)\n",
-      "Collecting xmltodict>=0.12.0 (from motmetrics->motrackers)\n",
-      "  Downloading xmltodict-0.14.2-py2.py3-none-any.whl.metadata (8.0 kB)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from pandas->motrackers) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from pandas->motrackers) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->motrackers) (1.17.0)\n",
-      "Requirement already satisfied: comm>=0.1.3 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipywidgets->ipyfilechooser->motrackers) (0.2.2)\n",
-      "Requirement already satisfied: ipython>=6.1.0 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipywidgets->ipyfilechooser->motrackers) (9.0.2)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipywidgets->ipyfilechooser->motrackers) (5.14.3)\n",
-      "Collecting widgetsnbextension~=4.0.12 (from ipywidgets->ipyfilechooser->motrackers)\n",
-      "  Downloading widgetsnbextension-4.0.13-py3-none-any.whl.metadata (1.6 kB)\n",
-      "Collecting jupyterlab-widgets~=3.0.12 (from ipywidgets->ipyfilechooser->motrackers)\n",
-      "  Downloading jupyterlab_widgets-3.0.13-py3-none-any.whl.metadata (4.1 kB)\n",
-      "Requirement already satisfied: colorama in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.4.6)\n",
-      "Requirement already satisfied: decorator in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (5.2.1)\n",
-      "Requirement already satisfied: ipython-pygments-lexers in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (1.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.1.7)\n",
-      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (3.0.50)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (2.19.1)\n",
-      "Requirement already satisfied: stack_data in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.6.3)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.8.4)\n",
-      "Requirement already satisfied: wcwidth in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.2.13)\n",
-      "Requirement already satisfied: executing>=1.2.0 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from stack_data->ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (2.2.0)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from stack_data->ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (3.0.0)\n",
-      "Requirement already satisfied: pure-eval in c:\\dev\\contagem-volumetrica\\venv\\lib\\site-packages (from stack_data->ipython>=6.1.0->ipywidgets->ipyfilechooser->motrackers) (0.2.3)\n",
-      "Downloading motrackers-0.0.2-py3-none-any.whl (34 kB)\n",
-      "Downloading ipyfilechooser-0.6.0-py3-none-any.whl (11 kB)\n",
-      "Downloading motmetrics-1.4.0-py3-none-any.whl (161 kB)\n",
-      "Downloading xmltodict-0.14.2-py2.py3-none-any.whl (10.0 kB)\n",
-      "Downloading ipywidgets-8.1.5-py3-none-any.whl (139 kB)\n",
-      "Downloading jupyterlab_widgets-3.0.13-py3-none-any.whl (214 kB)\n",
-      "Downloading widgetsnbextension-4.0.13-py3-none-any.whl (2.3 MB)\n",
-      "   ---------------------------------------- 0.0/2.3 MB ? eta -:--:--\n",
-      "   ---------------------- ----------------- 1.3/2.3 MB 7.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.3/2.3 MB 8.3 MB/s eta 0:00:00\n",
-      "Installing collected packages: xmltodict, widgetsnbextension, jupyterlab-widgets, motmetrics, ipywidgets, ipyfilechooser, motrackers\n",
-      "Successfully installed ipyfilechooser-0.6.0 ipywidgets-8.1.5 jupyterlab-widgets-3.0.13 motmetrics-1.4.0 motrackers-0.0.2 widgetsnbextension-4.0.13 xmltodict-0.14.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install motrackers"
+    "import numpy\n",
+    "import cv2\n",
+    "\n",
+    "print(\"numpy:\", numpy.__version__)\n",
+    "print(\"OpenCV:\", cv2.__version__)\n",
+    "print(\"Trackers disponíveis em legacy:\", dir(cv2.legacy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.system(f\"start {output_video_path}\")\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
