Add Label-Image and Label-Image-Ml

--- a/src/test/Moviment.ipynb
+++ b/src/test/Moviment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,21 +37,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vídeo criado com sucesso: sub_background.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "path        = \"output\\\\*.jpg\"\n",
+    "# Caminho para o vídeo\n",
+    "video_path  = \"input\\\\Teste.mp4\"\n",
     "save        = \"output\\\\sub_background\"\n",
     "os.makedirs(save, exist_ok=True)\n",
     "\n",
-    "files       = sorted(glob.glob(path), key=lambda x: int(\"\".join(filter(str.isdigit, os.path.basename(x)))))\n",
+    "# Captura de vídeo\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "prev_gray = None\n",
+    "idx = 0\n",
     "\n",
     "img_before  = None\n",
     "background_stack = []  # Para armazenar frames sem movimento\n",
     "\n",
-    "for idx, filename in enumerate(files):\n",
-    "    frame = cv2.imread(filename)\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
     "\n",
-    "    if img_before is not None:\n",
+    "    if type(img_before) != type(None):\n",
+    "        \n",
     "        # Grayscale e equalização\n",
     "        gray_prev = cv2.equalizeHist(cv2.cvtColor(img_before, cv2.COLOR_BGR2GRAY))\n",
     "        gray_curr = cv2.equalizeHist(cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY))\n",
@@ -78,6 +104,7 @@
     "        cv2.imwrite(os.path.join(save, f\"results{idx}.jpg\"), motion_mask)\n",
     "\n",
     "    img_before = frame.copy()\n",
+    "    idx+=1\n",
     "\n",
     "# # Gerar background final pela mediana dos frames estáticos\n",
     "# if background_stack:\n",
@@ -87,9 +114,12 @@
     "\n",
     "# Exemplo de uso\n",
     "image_folder = save\n",
-    "output_video_path = \"Detect.mp4\"\n",
+    "output_video_path = \"sub_background.mp4\"\n",
     "frame_rate = 13  # Substitua pelo frame rate desejado\n",
-    "create_video_from_images(image_folder, output_video_path, frame_rate)"
+    "create_video_from_images(image_folder, output_video_path, frame_rate)\n",
+    "\n",
+    "# Abrir vídeo automaticamente após criação\n",
+    "os.system(f\"start {output_video_path}\")"
    ]
   },
   {
@@ -101,9 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vídeo criado com sucesso: motion_flow.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Caminho para o vídeo\n",
     "video_path  = \"input\\\\Teste.mp4\"\n",
@@ -164,7 +212,10 @@
     "image_folder = save\n",
     "output_video_path = \"motion_flow.mp4\"\n",
     "frame_rate = get_framerate(video_path)  # Substitua pelo frame rate desejado\n",
-    "create_video_from_images(image_folder, output_video_path, frame_rate)"
+    "create_video_from_images(image_folder, output_video_path, frame_rate)\n",
+    "\n",
+    "# Abrir vídeo automaticamente após criação\n",
+    "os.system(f\"start {output_video_path}\")"
    ]
   },
   {
@@ -176,9 +227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vídeo criado com sucesso: motion_knn.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Caminhos\n",
     "video_path = \"input\\\\Teste.mp4\"\n",
@@ -200,38 +269,23 @@
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
-    "    \n",
+    "\n",
     "    # Ajuste de constraste\n",
     "    frame_blur = cv2.GaussianBlur(frame, (3, 3), 0)\n",
-    "    frame = cv2.detailEnhance(frame_blur, sigma_s=30, sigma_r=0.1)\n",
+    "    frame_detail = cv2.detailEnhance(frame_blur, sigma_s=30, sigma_r=0.1)\n",
     "\n",
-    "    # Ajuste automático de brilho\n",
-    "    # Converter para escala de cinza para análise de brilho\n",
-    "    gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    # Calcular o brilho médio\n",
-    "    mean_brightness = np.mean(gray_frame)\n",
-    "    # Definir brilho alvo (ajustar conforme necessário)\n",
-    "    target_brightness = 90\n",
-    "    # Calcular fator de ajuste\n",
-    "    adjustment_factor = target_brightness / mean_brightness if mean_brightness > 0 else 1\n",
-    "    # Aplicar ajuste de brilho\n",
-    "    frame = cv2.convertScaleAbs(frame, alpha=adjustment_factor, beta=0)\n",
-    "\n",
-    "    # Redução de ruído\n",
-    "    frame_blur = cv2.GaussianBlur(frame, (7, 7), 0)\n",
-    "    \n",
     "    # Grayscale e equalização\n",
-    "    frame_equalized = cv2.equalizeHist(cv2.cvtColor(frame_blur, cv2.COLOR_BGR2GRAY))\n",
+    "    frame_equalized = cv2.equalizeHist(cv2.cvtColor(frame_detail, cv2.COLOR_BGR2GRAY))\n",
     "    \n",
-    "    # Aplicar subtração de fundo KNN\n",
-    "    fgmask = fgbg.apply(frame_equalized)\n",
-    "    \n",
-    "    # Remover sombras (valores intermediários)\n",
-    "    fgmask[fgmask == 127] = 0\n",
+    "    # Redução de ruído\n",
+    "    frame_blur = cv2.GaussianBlur(frame_equalized, (3, 3), 0)\n",
     "\n",
     "    # Limpeza de ruído (leve e rápida)\n",
-    "    fgmask = cv2.morphologyEx(fgmask, cv2.MORPH_OPEN, kernel_open, iterations=1)\n",
-    "    fgmask = cv2.morphologyEx(fgmask, cv2.MORPH_CLOSE, kernel_close, iterations=2)\n",
+    "    frame_open = cv2.morphologyEx(frame_blur, cv2.MORPH_OPEN, kernel_open, iterations=1)\n",
+    "    frame_close = cv2.morphologyEx(frame_open, cv2.MORPH_CLOSE, kernel_close, iterations=2)\n",
+    "    \n",
+    "    # Aplicar subtração de fundo KNN\n",
+    "    fgmask = fgbg.apply(frame_close)\n",
     "\n",
     "    # Detectar contornos dos objetos claramente definidos\n",
     "    contours, _ = cv2.findContours(fgmask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -239,12 +293,16 @@
     "    # Criar máscara vazia para contornos precisos\n",
     "    precise_mask = np.zeros_like(fgmask)\n",
     "\n",
+    "    # Preencher contornos na máscara\n",
     "    for cnt in contours:\n",
-    "        if cv2.contourArea(cnt) >= area:  # Ignorar pequenos ruídos\n",
+    "        # Ignorar pequenos ruídos\n",
+    "        if cv2.contourArea(cnt) >= area:  \n",
     "            cv2.drawContours(precise_mask, [cnt], -1, 255, -1)  # Preenche o objeto detectado\n",
+    "        else:\n",
+    "            cv2.drawContours(precise_mask, [cnt], -1, 0, -1)  # Preenche o objeto detectado\n",
     "\n",
     "    # Extrair objetos em movimento (sem borrões)\n",
-    "    # moving_objects = cv2.bitwise_and(frame, frame, mask=precise_mask)\n",
+    "    moving_objects = cv2.bitwise_and(frame, frame, mask=precise_mask)\n",
     "\n",
     "    # Opcional: Desenhar caixa delimitadora ao redor dos objetos (facilita identificação)\n",
     "    for cnt in contours:\n",
@@ -253,7 +311,7 @@
     "            cv2.rectangle(frame, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
     "\n",
     "    # Salvar resultado com objetos definidos\n",
-    "    cv2.imwrite(os.path.join(save, f\"results_{idx:04}.jpg\"), precise_mask)\n",
+    "    cv2.imwrite(os.path.join(save, f\"results_{idx:04}.jpg\"), frame)\n",
     "\n",
     "    idx += 1\n",
     "    \n",
@@ -282,12 +340,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy\n",
-    "import cv2\n",
+    "!pip install opencv-contrib-python==4.5.3.56"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(\"input\\\\Teste.mp4\")\n",
     "\n",
-    "print(\"numpy:\", numpy.__version__)\n",
-    "print(\"OpenCV:\", cv2.__version__)\n",
-    "print(\"Trackers disponíveis em legacy:\", dir(cv2.legacy))"
+    "# Trackers atualizados para a versão atual do OpenCV\n",
+    "OPENCV_OBJECT_TRACKERS = {\n",
+    "    \"csrt\":         cv2.legacy.TrackerCSRT_create,\n",
+    "    # \"kcf\":          cv2.legacy.TrackerKCF_create,\n",
+    "    \"boosting\":     cv2.legacy.TrackerBoosting_create,\n",
+    "    # \"mil\":          cv2.legacy.TrackerMIL_create,\n",
+    "    \"tld\":          cv2.legacy.TrackerTLD_create,\n",
+    "    \"medianflow\":   cv2.legacy.TrackerMedianFlow_create,\n",
+    "    \"mosse\":        cv2.legacy.TrackerMOSSE_create\n",
+    "}\n",
+    "\n",
+    "# Agora gerenciamos múltiplos trackers manualmente\n",
+    "trackers = []\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    frame = cv2.resize(frame, (1090, 600))\n",
+    "\n",
+    "    boxes = []\n",
+    "    new_trackers = []\n",
+    "\n",
+    "    for tracker in trackers:\n",
+    "        success, box = tracker.update(frame)\n",
+    "        if success:\n",
+    "            boxes.append(box)\n",
+    "            new_trackers.append(tracker)\n",
+    "\n",
+    "    trackers = new_trackers\n",
+    "\n",
+    "    # Desenha caixas atualizadas\n",
+    "    for box in boxes:\n",
+    "        (x, y, w, h) = [int(v) for v in box]\n",
+    "        cv2.rectangle(frame, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
+    "        cv2.putText(frame, 'TRACKING', (x + 10, y - 3), cv2.FONT_HERSHEY_PLAIN, 1.5, (255, 255, 0), 2)\n",
+    "\n",
+    "    cv2.imshow('Frame', frame)\n",
+    "    k = cv2.waitKey(30)\n",
+    "\n",
+    "    if k == ord(\"s\"):\n",
+    "        roi = cv2.selectROI(\"Frame\", frame, fromCenter=False, showCrosshair=True)\n",
+    "        tracker = OPENCV_OBJECT_TRACKERS['tld']()\n",
+    "        tracker.init(frame, roi)\n",
+    "        trackers.append(tracker)\n",
+    "\n",
+    "    if k == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SPLIT VIDEO TO IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Caminhos\n",
+    "video_path = \"input\\\\Teste.mp4\"\n",
+    "save = \"output\\\\splited\"\n",
+    "os.makedirs(save, exist_ok=True)\n",
+    "\n",
+    "# Inicializar captura e detector KNN\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "idx = 0\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    # Salvar resultado com objetos definidos\n",
+    "    cv2.imwrite(os.path.join(save, f\"results_{idx:04}.jpg\"), frame)\n",
+    "    idx+=1\n",
+    "cap.release()"
    ]
   },
   {
@@ -300,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv_legacy",
    "language": "python",
    "name": "python3"
   },
