--- a/src/test/Detect.ipynb
+++ b/src/test/Detect.ipynb
@@ -4,26 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VERIFICANDO SE TEM CUDA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torchvision\n",
-    "print(\"torch:\", torch.__version__)\n",
-    "print(\"torchvision:\", torchvision.__version__)\n",
-    "print(\"CUDA disponível:\", torch.cuda.is_available())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# DATASET >> https://universe.roboflow.com/force-iaope/cars-egrgd/dataset/1#"
    ]
   },
@@ -36,17 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ultralytics import YOLO\n",
+    "from threading import Thread\n",
     "from PIL import Image\n",
+    "import queue as q\n",
+    "import shutil\n",
     "import cv2\n",
     "import os\n",
-    "import imutils\n",
     "\n",
     "from modules.helper.helper import create_video_from_images, get_framerate\n",
+    "\n",
+    "import torch\n",
+    "import torchvision\n",
+    "print(\"torch:\", torch.__version__)\n",
+    "print(\"torchvision:\", torchvision.__version__)\n",
+    "print(\"CUDA disponível:\", torch.cuda.is_available())\n",
     "\n",
     "# https://docs.ultralytics.com/datasets/"
    ]
@@ -72,96 +60,38 @@
     "\n",
     "# Train the model using the 'coco8.yaml' dataset for 3 epochs # c:\\dev\\datasets\n",
     "results = model.train(\n",
-    "    data=\"coco128.yaml\", \n",
-    "    epochs=1000,                # Number of epochs to train\n",
-    "    device=\"0\", \n",
-    "    workers=2,                  # Number of workers for data loading\n",
-    "    classes=[0, 1, 2, 3, 5, 7], # Alterar para as classes desejadas\n",
-    "    imgsz=1024,                 # Image size for training (960x960) \n",
-    "    batch=4,                    # Batch size\n",
-    "    cache=True,                 # Cache images for faster training\n",
-    "    save_period=5,              # Save model every 5 epochs\n",
-    "    name=\"yolo11n_960_1000\",    # Alterar para o nome desejado \n",
-    "    exist_ok=True,              # Overwrite existing model directory\n",
-    "    project=\"runs/train\",       # Alterar para o diretório desejado\n",
-    "    resume=True,                # Continue training from the last checkpoint\n",
-    "    patience=10,                # Early stopping patience\n",
-    "    optimizer=\"AdamW\",          # Alterar para 'Adam' ou 'AdamW' se necessário\n",
-    "    pretrained=True,            # Use True para carregar pesos pré-treinados\n",
-    "    # hyp=\"data/hyp.scratch-low.yaml\",\n",
+    "    data=\"data_train.yaml\",        # Arquivo de configuração do seu dataset\n",
+    "    epochs=1000,                   # Número de épocas (pode ser ajustado conforme necessário)\n",
+    "    device=\"cuda\" if torch.cuda.is_available() else \"cpu\",  # Verifica se há GPU disponível, caso contrário usa CPU\n",
+    "    workers=2,                     # Número de workers para carregamento dos dados (aumentado para agilizar)\n",
+    "    imgsz=512,                     # Tamanho das imagens (960x960)\n",
+    "    batch=4,                       # Tamanho do batch (aumentado para melhor estabilidade, se sua GPU suportar)\n",
+    "    cache=\"disk\",                  # Utiliza cache no disco para garantir resultados determinísticos\n",
+    "    save_period=5,                 # Salva o modelo a cada 5 épocas\n",
+    "    name=\"yolo11n_512_1000_max\",   # Nome da pasta de treinamento\n",
+    "    exist_ok=True,                 # Sobrescreve o diretório existente, se houver\n",
+    "    project=\"../../runs/train\",    # Diretório onde os resultados serão salvos\n",
+    "    resume=False,                  # Não retoma de um checkpoint anterior\n",
+    "    patience=10,                   # Aumenta a paciência do EarlyStopping para 50 épocas (ajuste conforme necessário)\n",
+    "    optimizer=\"AdamW\",             # Otimizador SGD Adam AdamW pode melhorar a convergência\n",
+    "    pretrained=True,               # Utiliza pesos pré-treinados\n",
+    "    optimize=True,                 # Otimiza o modelo para melhor desempenho\n",
+    "    classes=[1, 2, 3, 4],          # Escolhe as classes a serem treinadas (0: pessoas, 1: carros)\n",
+    "    # hyp=\"data/hyp.scratch-low.yaml\" # Arquivo de hiperparâmetros; ajuste-o conforme o seu dataset\n",
     ")\n",
     "\n",
     "# Validate the model on the validation set\n",
     "valid = model.val()\n",
     "\n",
     "# Export the model to ONNX format\n",
-    "# success = model.export(format=\"onnx\")\n",
-    "\n",
-    "# Save the trained model for future reuse\n",
-    "model.save(\"trained_model/last.pt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ultralytics 8.3.99  Python-3.12.7 torch-2.6.0+cu118 CPU (12th Gen Intel Core(TM) i7-1255U)\n",
-      "\n",
-      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'c:\\dev\\Contagem-Volumetrica\\runs\\detect\\train21\\weights\\best.pt' with input shape (1, 3, 960, 960) BCHW and output shape(s) (1, 84, 18900) (5.3 MB)\n",
-      "\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m starting export with onnx 1.17.0 opset 19...\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m slimming with onnxslim 0.1.49...\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m export success  12.2s, saved as 'c:\\dev\\Contagem-Volumetrica\\runs\\detect\\train21\\weights\\best.onnx' (10.1 MB)\n",
-      "\n",
-      "Export complete (12.7s)\n",
-      "Results saved to \u001b[1mC:\\dev\\Contagem-Volumetrica\\runs\\detect\\train21\\weights\u001b[0m\n",
-      "Predict:         yolo predict task=detect model=c:\\dev\\Contagem-Volumetrica\\runs\\detect\\train21\\weights\\best.onnx imgsz=960  \n",
-      "Validate:        yolo val task=detect model=c:\\dev\\Contagem-Volumetrica\\runs\\detect\\train21\\weights\\best.onnx imgsz=960 data=C:\\dev\\Contagem-Volumetrica\\venv\\Lib\\site-packages\\ultralytics\\cfg\\datasets\\coco128.yaml  \n",
-      "Visualize:       https://netron.app\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\dev\\\\Contagem-Volumetrica\\\\runs\\\\detect\\\\train21\\\\weights\\\\best.onnx'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.export(format=\"onnx\", dynamic=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the trained model for future reuse\n",
-    "model.save(\"trained_model.pt\")"
+    "success = model.export(format=\"onnx\", dynamic=True)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST IN VIDEO 12s"
+    "# TEST IN VIDEO"
    ]
   },
   {
@@ -170,31 +100,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Caminho para o vídeo\n",
-    "video_path  = \"input\\\\Teste.mp4\"\n",
+    "# Load the YOLO11 model\n",
+    "model           = YOLO(\"..\\\\..\\\\runs\\\\train\\\\yolo11n_512_1000_max\\\\weights\\\\best.pt\")\n",
     "\n",
-    "save        = \"output\\\\detect\"\n",
+    "# Open the video file\n",
+    "video_path      = \"input\\\\OneDrive\\\\Ponto 1\\\\Av. Mato Grosso x BR153 (Goiânia)\\\\Manhã\\\\Rec95_20250318065523_S_1.avi\" # \"input\\\\Teste.mp4\"\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "# Path to save the output frames\n",
+    "save            = \"output\\\\detect\"\n",
+    "shutil.rmtree(save)\n",
     "os.makedirs(save, exist_ok=True)\n",
     "\n",
-    "# Perform object detection on an image using the model\n",
-    "results = model(source=video_path)\n",
+    "# Initialize the count frame index and queue \n",
+    "idx = 0\n",
+    "queue = q.Queue(maxsize=100)  # Create a queue with a maximum size of 500\n",
     "\n",
-    "# Visualize the results\n",
-    "for i, r in enumerate(results):\n",
-    "    try:\n",
-    "        # Plot results image\n",
-    "        r = imutils.resize(r, width=700)\n",
-    "        im_bgr = r.plot()  # BGR-order numpy array\n",
-    "        if im_bgr is None:\n",
-    "            print(f\"Resultado {i} não contém dados válidos para plotar.\")\n",
-    "            continue\n",
-    "        im_rgb = Image.fromarray(im_bgr[..., ::-1])  # RGB-order PIL image\n",
-    "        # Save results to disk\n",
-    "        r.save(filename=os.path.join(save, f\"results{i}.jpg\"))\n",
-    "    except ValueError as e:\n",
-    "        print(f\"Erro ao processar o resultado {i}: {e}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Erro inesperado ao processar o resultado {i}: {e}\")\n",
+    "# Function to save the frame as an image\n",
+    "def SaveFrame():\n",
+    "    while True:\n",
+    "        frame, idx = queue.get()  # Get the frame and index from the queue\n",
+    "        if frame is None or idx is None: break\n",
+    "        cv2.imwrite(os.path.join(save, f\"frame_{idx}.jpg\"), frame)\n",
+    "\n",
+    "# Create and start threads for saving frames\n",
+    "SaveFrameThreads = []\n",
+    "for i in range(3):\n",
+    "    thread = Thread(target=SaveFrame, daemon=True)  # Create a thread to save frames\n",
+    "    thread.start()  # Start the thread\n",
+    "    SaveFrameThreads.append(thread)  # Add the thread to the list\n",
+    "\n",
+    "# Loop through the video frames\n",
+    "while cap.isOpened():\n",
+    "    \n",
+    "    # Read a frame from the video\n",
+    "    success, frame = cap.read()\n",
+    "\n",
+    "    if success:\n",
+    "        \n",
+    "        try:\n",
+    "            # Run YOLO11 tracking on the frame, persisting tracks between frames\n",
+    "            results = model.track(\n",
+    "                frame, \n",
+    "                persist=True,\n",
+    "                classes=[1, 2, 3, 4],   # Classes to track\n",
+    "                conf=0.5,               # Confidence threshold\n",
+    "                iou=0.45,               # IoU threshold\n",
+    "                device= (\n",
+    "                    \"cuda\" \n",
+    "                    if torch.cuda.is_available() \n",
+    "                    else \n",
+    "                    \"cpu\"\n",
+    "                ),                      # Verifica se há GPU disponível, caso contrário usa CPU\n",
+    "                show=False,             # Show the results\n",
+    "                save=False,             # Save the results\n",
+    "                save_txt=False,         # Save results to text files\n",
+    "                save_conf=False,        # Save confidence scores\n",
+    "                save_crop=False,        # Save cropped images of detected objects\n",
+    "                # save_dir=save,        # Directory to save results\n",
+    "                # project=save,         # Project name\n",
+    "                name=\"detect\",          # Name of the folder to save results\n",
+    "                exist_ok=True,          # Overwrite existing results\n",
+    "                line_width=1,           # Line thickness for bounding boxes\n",
+    "                show_labels=True,       # Hide labels on bounding boxes\n",
+    "                show_conf=True,         # Hide confidence scores on bounding boxes\n",
+    "                half=True,              # Use half precision (FP16) for inference\n",
+    "                dnn=False,              # Use OpenCV DNN for inference\n",
+    "                vid_stride=1,           # Frame stride for video processing\n",
+    "                agnostic_nms=False,     # Use class-agnostic NMS\n",
+    "                augment=False,          # Use augmentation during inference\n",
+    "                visualize=False,        # Visualize the results\n",
+    "                verbose=False,          # Verbose output\n",
+    "            )\n",
+    "            \n",
+    "            # Visualize the results on the frame\n",
+    "            annotated_frame = results[0].plot()\n",
+    "            if annotated_frame is None:\n",
+    "                print(f\"Resultado {idx} não contém dados válidos para plotar.\")\n",
+    "                continue\n",
+    "            \n",
+    "            im_rgb = Image.fromarray(annotated_frame[..., ::-1])  # RGB-order PIL image\n",
+    "            queue.put((annotated_frame, idx))  # Add the frame to the queue for saving\n",
+    "            idx += 1  # Increment the frame index\n",
+    "        except ValueError as e:\n",
+    "            print(f\"Erro ao processar o resultado {idx}: {e}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Erro inesperado ao processar o resultado {idx}: {e}\")\n",
+    "\n",
+    "    else:\n",
+    "        # Break the loop if the end of the video is reached\n",
+    "        break\n",
+    "\n",
+    "# Wait for all threads to finish processing\n",
+    "for idx, thread in enumerate(SaveFrameThreads):\n",
+    "    print(f\"Wait for the thread to finish {idx}\")\n",
+    "    queue.put((None, None))\n",
+    "    thread.join()  # Wait for all threads to finish\n",
+    "\n",
+    "# Release the video capture object and close the display window\n",
+    "cap.release()\n",
     "\n",
     "# Exemplo de uso\n",
     "image_folder = save\n",
@@ -205,6 +209,13 @@
     "# Abrir vídeo automaticamente após criação\n",
     "os.system(f\"start {output_video_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
