--- a/src/test/Detect.ipynb
+++ b/src/test/Detect.ipynb
@@ -98,7 +98,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wait for the thread to finish 1\n",
+      "Wait for the thread to finish 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the YOLO11 model\n",
     "model           = YOLO(\"..\\\\..\\\\runs\\\\train\\\\yolo11n_512_1000_max\\\\weights\\\\best.pt\")\n",
