--- a/src/test/Moviment.ipynb
+++ b/src/test/Moviment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from ultralytics import YOLO\n",
     "from PIL import Image\n",
     "import torchvision\n",
+    "import shutil\n",
     "import torch\n",
     "import cv2\n",
     "import os\n",
@@ -942,13 +943,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Caminhos\n",
-    "video_path = \"input\\\\Recv02_20250325135451@5802d41e.avi\"\n",
+    "video_path = \"input\\\\OneDrive\\\\Ponto 1\\\\Av. PB1 x Av. A. Senna\\\\Manhã\\\\Rec5_20250318065521_S_1.avi\"\n",
     "save = \"output\\\\splited\"\n",
+    "shutil.rmtree(save)\n",
     "os.makedirs(save, exist_ok=True)\n",
     "\n",
     "frame_rate = get_framerate(video_path) * 2 # Obter o frame rate do vídeo\n",
